<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextCommentOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Chú thích"
            android:inputType="textMultiLine"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />

        <TextView
            android:text="@string/Delivery_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdiShipToAddress"
                android:text="Ship To This Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rdiHomeAddress"
                android:text="Ship To Home Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <TextView
            android:text="@string/Payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdiCOD"
                android:text="@string/Cash_On_Delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rdiPaypal"
                android:text="@string/Paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>
    </LinearLayout>

</androidx.cardview.widget.CardView>